--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="email">
                         <a href="" class="email_items">
-                            <img src="img/emil_svg.svg" alt="email_svg" class="svg_email"> inf0@sal-terra.ru
+                            <img src="img/email.svg" alt="email_svg" class="svg_email"> inf0@sal-terra.ru
                         </a>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
         </section>
         <section class="about">
             <div class="container about_content">
-                <div class="we about-container">
+                <div class="we-about about-container">
                     <h1 class="about_h1">
                         СЛОВО ОСНОВАТЕЛЯ
                     </h1>
@@ -202,21 +202,230 @@
                 </div>
                 <div class="about-video">
                     <div class="about-video_item">
-                        <div class="">
-                            <p>
+                        <div class="about-video_play">
+                            <p class="about-video_play_item">
                                 СМОТРЕТЬ ВИДЕО О КОМПАНИИ
                             </p>
-                        </div>
-                        <div class="">
-                            <p>
-                                Ставить поясной портрет руководителя организации
-                            </p>
+                            <div class="play_video">
+                                <a href="" class="play-video_about">
+                                    <img src="img/play.svg" alt="" class="play">
+                                </a>
+                            </div>
                         </div>
                     </div>
-                    <div class="play_video">
-                        <a href="" class="play-video_about">
-                            <img src="img/osn.png" alt="" class="play">
-                        </a>
+                    
+                </div>
+                <div class="about-video_port">
+                    <p class="about-video_port_item">
+                        Ставить поясной портрет руководителя организации
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="we">
+            <div class="container">
+                <div class="we_block_h1">
+                    <h1 class="we_items_h1">
+                        ПОЧЕМУ МЫ
+                    </h1>
+                    <div class="we_border">
+                    </div>
+                    <div class="we_items_item">
+                        <p class="we_items_item_p">
+                            <span>Консультируем вас на каждом этапе</span> по выбору,подготовке помещения, помогаем выбрать оборудование, <span>бессрочно помогаем с рекламой.</span> 
+                         </p>
+                    </div>
+                </div>
+                <div class="we_block_info">
+                    <div class="we_block_info__items">
+                        <div class="we_border_item">
+                            <img src="img/we_svg_one.svg" alt="map" class="we_block_info_img">
+                        </div>
+                        <h2 class="we_block_info_h2">
+                            БОЛЕЕ 300 ПЕЩЕР
+                        </h2>
+                        <p class="we_block_info_p we_block_info_padding">
+                            В 6 странах за 6 лет работы
+                        </p>
+                        
+                    </div>
+                    <div class="we_block_info__items">
+                        <div class="we_border_item">
+                            <img src="img/we_svg_two.svg" alt="advertising" class="we_block_info_img">
+                        </div>
+                        <h2 class="we_block_info_h2">
+                            ПОМОЩЬ С РЕКЛАМОЙ
+                        </h2>
+                        <p class="we_block_info_p ">
+                            После завершения строительства пещеры
+                        </p>
+                    </div>
+                    <div class="we_block_info__items">
+                        <div class="we_border_item">
+                            <img src="img/we_svg_three.svg" alt="chat" class="we_block_info_img">
+                        </div>
+                        <h2 class="we_block_info_h2">
+                            ЧЕСТНОСТЬ И ОТКРЫТОСТЬ
+                        </h2>
+                        <p class="we_block_info_p ">
+                            Показываем только фото с наших объектов, открыто говорим об опыте и проделанной работе.
+                        </p>
+                    </div>
+                    <div class="we_block_info__items">
+                        <div class="we_border_item">
+                            <img src="img/we_svg_4.svg" alt="email" class="we_block_info_img">
+                        </div>
+                        <h2 class="we_block_info_h2">
+                            НАУЧНАЯ ОСНОВА
+                        </h2>
+                        <p class="we_block_info_p we_block_info_padding">
+                            Работаем в соответствии с рекомендациями научных работников и профессоров.
+                        </p>
+                    </div>
+                    <div class="we_block_info__items">
+                        <div class="we_border_item">
+                            <img src="img/we_svg_5.svg" alt="дизайн" class="we_block_info_img">
+                        </div>
+                        <h2 class="we_block_info_h2">
+                            ДИЗАЙН ОТ ЭЛИТНОГО ДО БЮДЖЕТНОГО
+                        </h2>
+                        <p class="we_block_info_p ">
+                            В нашем портфолио есть проекты на любой бюджет. Мы знаем, где сэкономить, чтобы было красиво, полезно и недорого. Также знаем, как улучшить внешний вид, если нужно дорого-богато.
+                        </p>
+                    </div>
+                    <div class="we_block_info__items">
+                        <div class="we_border_item">
+                            <img src="img/we_svg_6.svg" alt="book" class="we_block_info_img">
+                        </div>
+                        <h2 class="we_block_info_h2">
+                            ПОНЯТНАЯ И ОТКРЫТАЯ СМЕТА
+                        </h2>
+                        <p class="we_block_info_p we_block_info_padding">
+                            Если нужна оплата командировочных расходов, строительных материалов и соли, мы прописываем их отдельной строкой. За вами остаётся право оставить эти суммы в договоре или взять расходы на себя.
+                        </p>
+                    </div>
+                    <div class="we_block_info__items">
+                        <div class="we_border_item">
+                            <img src="img/we_svg_7.svg" alt="equipment" class="we_block_info_img">
+                        </div>
+                        <h2 class="we_block_info_h2">
+                            3 ПРОИЗВОДИТЕЛЯ ОБОРУДОВАНИЯ
+                        </h2>
+                        <p class="we_block_info_p we_block_info_padding">
+                            Все бытовые галогенераторы изготовлены на одной технологической линии с медицинскими, что гарантирует их надёжность и успешное проведение сеансов.
+                        </p>
+                    </div>
+                    <div class="we_block_info__items">
+                        <div class="we_border_item">
+                            <img src="img/we_svg_8.svg" alt="person" class="we_block_info_img">
+                        </div>
+                        <h2 class="we_block_info_h2">
+                            15 БЫТОВЫХ И 7 МЕДИЦИНСКИХ ГЕНЕРАТОРОВ
+                        </h2>
+                        <p class="we_block_info_p ">
+                            Мы подберём подходящее именно вам по техническим характеристикам, бюджету, личным предпочтениям.
+                        </p>
+                    </div>
+                </div>
+                <div class="we_arrow_border">
+                    <img src="img/we_arrow.svg" alt="arrow">
+                </div>
+                <div class="we_info_button">
+                    <h2 class="we_info_button_h2">
+                        Выберете подходящую вам категорию
+                    </h2>
+                    <div class="we_button_items">
+                        <button class="we_button we_button_active we_button_1">
+                            ПРЕДПРИНИМАТЕЛЯМ
+                        </button>
+                        <button class="we_button we_button_2">
+                            БИЗНЕСУ
+                        </button>
+                        <button class="we_button we_button_3">
+                            ПЕЩЕРА ДЛЯ СЕБЯ
+                        </button>
+                        <button class="we_button we_button_4">
+                            ПОДРЯДЧИКАМ
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="work">
+            <div class="container">
+                <div class="we_block_h1">
+                    <h1 class="we_items_h1">
+                        НАШИ РАБОТЫ
+                    </h1>
+                    <div class="we_border">
+                    </div>
+                    <div class="we_items_item">
+                        <p class="we_items_item_p">
+                            Мы собрали часть наших работ, чтобы вы могли увидеть наши возможности.
+                         </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="team">
+            <div class="container">
+                <h1 class="team_title">
+                    НАША КОМАНДА
+                </h1>
+                <div class="team_item">
+                    <div class="team_item__block">
+                        <img src="img/team_img_one.jpg" alt="team_img" class="tem_img">
+                        <h3 class="team_name">
+                            Олег Власов
+                        </h3>
+                        <h4 class="team_work">
+                            Генеральный директор
+                        </h4>  
+                        <p class="team_work_p">
+                            Лично ведёт большинство проектов. Любит своё дело, потому что оно приносит не только деньги,  но и пользу обществу, как бы глобально это не звучало.
+                        </p>             
+                    </div>
+                    <div class="team_item__block">
+                        <div class="qwerty">
+                            <img src="img/team_img_two.jpg" alt="team_img" class="team_img">  
+                            <h3 class="team_name">
+                                Екатерина
+                            </h3>
+                            <h4 class="team_work">
+                                Менеджер по развитию, правая рука генерального директора
+                            </h4>  
+                            <p class="team_work_p">
+                                Готовит коммерческие предложения, подбирает оборудование, обсуждает дизайн, помогает клиентам с рекламой.
+                            </p> 
+                        </div>                 
+                    </div>
+                    <div class="team_item__block">
+                        <div class="qwerty">
+                            <img src="img/team_img_three.jpg" alt="team_img" class="team_img">  
+                            <h3 class="team_name">
+                                Антон
+                            </h3>
+                            <h4 class="team_work">
+                                Мастер-монтажник
+                            </h4>  
+                            <p class="team_work_p">
+                                Опытный, ответственный, педантичный мастер. Его конёк – пристенные конструкции с подсветкой. Антон очень красиво рисует и ювелирно выпиливает. 
+                            </p>
+                        </div>                
+                    </div>
+                    <div class="team_item__block">
+                        <div class="qwerty">
+                            <img src="img/team_img_four.jpg" alt="team_img" class="team_img"> 
+                            <h3 class="team_name">
+                                Максим
+                            </h3>
+                            <h4 class="team_work">
+                                Мастер-монтажник
+                            </h4>  
+                            <p class="team_work_p">
+                                Творческий человек. Любит монтировать объёмные имитации природных соляных пещер. Объёмы у Максима получаются очень форменными.
+                            </p>
+                        </div>                
                     </div>
                 </div>
             </div>
