--- a/index.html
+++ b/index.html
@@ -430,9 +430,209 @@
                 </div>
             </div>
         </section>
+        <section class="reviews">
+            <div class="container">
+                <div class="we_block_h1">
+                    <h1 class="we_items_h1">
+                        ОТЗЫВЫ
+                    </h1>
+                    <div class="we_border">
+                    </div>
+                    <div class="we_items_item we_items_item_reviews">
+                        <p class="we_items_item_p we_items_item_p_reviews">
+                            Отзывы наших клиентов. Спасибо, что делитесь ими. Мы гордимся сотрудничеством с каждым из вас.
+                         </p>
+                    </div>
+                </div>
+                <div class="reviews_video">
+                    <div class="reviews_video_item">
+                        <a href="" class="reviews_items">
+                            <img src="" alt="" class="reviews_items_img">
+                        </a>
+                    </div>
+                    <div class="reviews_video_item">
+                        <a href="" class="reviews_items">
+                            <img src="" alt="" class="reviews_items_img">
+                        </a>
+                    </div>
+                    <div class="reviews_video_item">
+                        <a href="" class="reviews_items">
+                            <img src="" alt="" class="reviews_items_img">
+                        </a>
+                    </div>
+                </div>
+                <div class="reviews_next">
+                    <a href="" class="reviews_next_a">
+                        <div class="reviews_arrow">
+                            <img src="" alt="" class="reviews_arrow_svg">
+                        </div>
+                        БОЛЬШЕ ОТЗЫВОВ
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section class="article">
+            <div class="container">
+                <div class="border_article">
+                </div>
+                <div class="we_block_h1 article_title">
+                    <h1 class="we_items_h1 we_items_h1_article">
+                        СТАТЬИ
+                    </h1>
+                    <div class="we_border">
+                    </div>
+                    <div class="we_items_item we_items_item_article">
+                        <p class="we_items_item_p we_items_item_p_article">
+                            Здесь вы найдете отзветы на самые актуальные вопросы о бизнесе в сфере сгелео и галотерапии.
+                         </p>
+                    </div>
+                </div>
+                <div class="article_all">
+                    <div class="article_item">
+                        <div class="article_item_img">
+                            <img src="img/article_one.jpg" alt="article_photo" class="article_item_photo">
+                        </div>
+                        <div class="article_item_text">
+                            <h2 class="article_item_title">
+                                ЗАГОЛОВОК СТАТЬИ
+                            </h2>
+                            <p class="article_item_p">
+                                Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. 
+                            </p>
+                            <a href="" class="article_item_next">
+                                <img src="" alt="" class="reviews_arrow_svg">
+                                ЧИТАТЬ ЦЕЛИКОМ
+                            </a>
+                        </div>
+                    </div>
+                    <div class="article_item">
+                        <div class="article_item_img">
+                            <img src="img/article_two.jpg" alt="article_photo" class="article_item_photo">
+                        </div>
+                        <div class="article_item_text">
+                            <h2 class="article_item_title">
+                                ЗАГОЛОВОК СТАТЬИ
+                            </h2>
+                            <p class="article_item_p">
+                                Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. 
+                            </p>
+                            <a href="" class="article_item_next">
+                                <img src="" alt="" class="reviews_arrow_svg">
+                                ЧИТАТЬ ЦЕЛИКОМ
+                            </a>
+                        </div>
+                    </div>
+                    <div class="article_item">
+                        <div class="article_item_img">
+                            <img src="img/article_three.jpg" alt="article_photo" class="article_item_photo">
+                        </div>
+                        <div class="article_item_text">
+                            <h2 class="article_item_title">
+                                ЗАГОЛОВОК СТАТЬИ
+                            </h2>
+                            <p class="article_item_p">
+                                Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. 
+                            </p>
+                            <a href="" class="article_item_next">
+                                <img src="" alt="" class="reviews_arrow_svg">
+                                ЧИТАТЬ ЦЕЛИКОМ
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
+        <div class="footer_items">
+            <div class="container">
+                <div class="footer__flex">
+                    <div class="footer_item_text">
+                        <div class="footer_item_text_title">
+                            <h2 class="footer_item_text_title_h2">
+                                ОСТАЛИСЬ ВОПРОСЫ?
+                            </h2>
+                        </div>
+                        <div class="footer_item_text_p">
+                            <p class="footer_item_text_descr">
+                                Нужен расчет стоимости проекта или информация об оборудовании?
+                            </p>
+                            <p class="footer_item_text_descr">
+                                Заполните форму. Наш менеджер свяжется с вами в течение 15 минут.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="footer_item_input">
+                        <form action="" class="footer_form">
+                            <input type="email" class="wpcf7-form-control" value="Ваш E-mail">
+                            <input type="tel" class="wpcf7-form-control" value="Ваш Телефон">
+                            <button name="submit" class="wpcf7-submit">
+                                ЗАДАТЬ ВОПРОС
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer_two">
+            <div class="container footer_last">
+                <div class="footer_item">
+                    <img src="" alt="">
+                    <p class="footer_descr">
+                        © 2013-2021 | Сал-Терра - строительство соляных пещер, соляных комнат, галокамер
+                    </p>
+                    <p class="footer_descr">
+                        Все права защищены. Перепечатка материалов и фотографий без согласования с владельцами сайта запрещена.
+                    </p>
+                </div>
+                <div class="footer_item">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="">О НАС</a>
+                            </li>
+                            <li>
+                                <a href="">НАШИ РАБОТЫ</a>
+                            </li>
+                            <li>
+                                <a href="">ОТЗЫВЫ</a>
+                            </li>
+                            <li>
+                                <a href="">СТАТЬИ</a>
+                            </li>
+                            <li>
+                                <a href="">НАША КОМАНДА</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="footer_item">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="">БИЗНЕС-ИДЕЯ</a>
+                            </li>
+                            <li>
+                                <a href="">ГОТОВОМУ БИЗНЕСУ</a>
+                            </li>
+                            <li>
+                                <a href="">ОБУЧЕНИЕ</a>
+                            </li>
+                            <li>
+                                <a href="">ГАЛОГЕНЕРАТОРЫ</a>
+                            </li>
+                            <li>
+                                <a href="">ГАЛЕРЕЯ</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="footer_item">
+    
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
