--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <nav class="nav_list container">
                 <ul class="nav_menu">
                     <li class="nav_menu__items">
-                        <a href="" class="menu menu_one">ГЛАВНАЯ</a>
+                        <a href="#" class="menu menu_one">ГЛАВНАЯ</a>
                     </li>
                     <li class="nav_menu__items">
                         <a href="" class="menu">БИЗНЕС-ИДЕИ</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="" class="menu">ГАЛОГЕНЕРАТОРЫ</a>
+                        <a href="index_product.html" class="menu">ГАЛОГЕНЕРАТОРЫ</a>
                     </li>
                     <li class="nav_menu__items">
                         <a href="" class="menu">ИСКУССТВЕННОЕ ОСВЕЩЕНИЕ</a>
@@ -934,7 +934,7 @@
                     <div class="footer_item_input">
                         <form action="" class="footer_form">
                             <input type="email" name="email" class="wpcf7-form-control" value="" placeholder="Ваш E-mail" >
-                            <input type="tel" name="tell" class="wpcf7-form-control tell" value="" placeholder="Ваш Телефон">
+                            <input type="tell" name="tell" class="wpcf7-form-control tell" value="" placeholder="Ваш Телефон">
                             <button name="submit" class="wpcf7-submit">
                                 ЗАДАТЬ ВОПРОС
                             </button>
