--- a/cart_product.html
+++ b/cart_product.html
@@ -27,10 +27,10 @@
                         <a href="" class="menu">ИСКУССТВЕННОЕ ОСВЕЩЕНИЕ</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="" class="menu">НОВОСТИ И СТАТЬИ</a>
+                        <a href="article.html" class="menu">НОВОСТИ И СТАТЬИ</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="" class="menu">ПОРТФОЛИО</a>
+                        <a href="gallery.html" class="menu">ПОРТФОЛИО</a>
                     </li>
                     <li class="nav_menu__items">
                         <a href="" class="menu">КОНТАКТЫ</a>
