--- a/contackt.html
+++ b/contackt.html
@@ -129,39 +129,75 @@
                         </div>
                     </div>
                     <div class="__item">
-                        <p>
-                            Бригады в Санкт-Петербурге и Москве.
-                        </p>
-                        <p>
-                            Работаем по всей территории РФ, в странах СНГ (Казахстан, Киргизия, Узбекистан), Китае, Грузии, Израиле. Готовы расширять географию своих работ.
-                        </p>
-                        <p>
-                            Электронная почта
-                        </p>
-                        <p>
-                            info@sal-terra.ru
-                        </p>
-                        <p>
-                            Телефоны для связи:
-                        </p>
-                        <p>
-                            Генеральный директор, Олег  
-                        </p>
-                        <a href="">
-                            <img src="" alt=""> +7 (929) 106 02 06
-                        </a>
-                        <p>
-                            Менеджер по развитию, Екатерина 
-                        </p>
-                        <a href="">
-                            <img src="" alt=""> +7 (981) 756 55 45
-                        </a>
-                        <a href="">
-                            QR-код WeChat
-                        </a>
+                        <div class="__descr-contackt">
+                            <p>
+                                Бригады в Санкт-Петербурге и Москве.
+                            </p>
+                            <p>
+                               <span>Работаем по всей территории РФ, в странах СНГ (Казахстан, Киргизия, Узбекистан), Китае, Грузии, Израиле.</span> Готовы расширять географию своих работ.
+                            </p>
+                        </div>
+                        <div class="__descr-contackt">
+                            <p>
+                              <span>Электронная почта</span>  
+                            </p>
+                            <p>
+                                info@sal-terra.ru
+                            </p>
+                        </div>
+                        <div class="__descr-contackt">
+                            <p>
+                               <span>Телефоны для связи:</span> 
+                            </p>
+                            <p class="contackt__text">
+                                Генеральный директор, Олег  
+                            </p>
+                            <a href="">
+                                <img src="img/phone_svg.svg" alt=""> +7 (929) 106 02 06
+                            </a>
+                            <p class="contackt__text">
+                                Менеджер по развитию, Екатерина 
+                            </p>
+                            <a href="">
+                                <img src="img/phone_svg.svg" alt=""> +7 (981) 756 55 45
+                            </a>
+                            <a href="">
+                                QR-код WeChat
+                            </a>
+                        </div>
                     </div>
                     <div class="__item">
                         <img src="img/qrcode.png" alt="qrcode">             
+                    </div>
+                </div>
+                <div class="wrapper__items">
+                    <div class="__item">
+                        <div class="__item-descr">
+                            <img src="img/contackt__icons_1.svg" alt="">
+                            <p>
+                                Режим работы:  нам можно звонить с 10.00 до 20.00 без выходных и праздников.
+                            </p>
+                        </div>
+                        <div class="__item-descr">
+                            <img src="img/contackt__icons_2.svg" alt="">
+                            <p>
+                                Коммерческие предложения готовим в будние дни, с 10 до 19.00.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="__item">
+                        <p>
+                            Всегда готовы пойти на встречу и подготовить коммерческое или документы в нужные вам сроки.
+                        </p>
+                        <p>
+                            Бесплатный выезд на осмотр объекта в городах присутствия бригады в удобное для вас время (по предварительной договорённости, естественно).
+                        </p>
+                        <p>
+                            Другие города и регионы обсуждаемы.
+                        </p>
+                        <p>
+                            Звоните, пишите, обо всём договоримся.
+                        </p>
                     </div>
                 </div>
             </div>
