--- a/article.html
+++ b/article.html
@@ -27,13 +27,13 @@
                         <a href="" class="menu">ИСКУССТВЕННОЕ ОСВЕЩЕНИЕ</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="" class="menu">НОВОСТИ И СТАТЬИ</a>
+                        <a href="#" class="menu">НОВОСТИ И СТАТЬИ</a>
                     </li>
                     <li class="nav_menu__items">
                         <a href="gallery.html" class="menu">ПОРТФОЛИО</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="" class="menu">КОНТАКТЫ</a>
+                        <a href="contackt.html" class="menu">КОНТАКТЫ</a>
                     </li>
                 </ul>
             </nav>
