--- a/gallery_item.html
+++ b/gallery_item.html
@@ -33,7 +33,7 @@
                         <a href="gallery.html" class="menu">ПОРТФОЛИО</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="" class="menu">КОНТАКТЫ</a>
+                        <a href="contackt.html" class="menu">КОНТАКТЫ</a>
                     </li>
                 </ul>
             </nav>
