--- a/article.html
+++ b/article.html
@@ -18,16 +18,16 @@
                         <a href="index.html" class="menu menu_one">ГЛАВНАЯ</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="" class="menu">БИЗНЕС-ИДЕИ</a>
+                        <a href="buisnes.html" class="menu">БИЗНЕС-ИДЕИ</a>
                     </li>
                     <li class="nav_menu__items">
                         <a href="index_product.html" class="menu">ГАЛОГЕНЕРАТОРЫ</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="" class="menu">ИСКУССТВЕННОЕ ОСВЕЩЕНИЕ</a>
+                        <a href="equipment.html" class="menu">ИСКУССТВЕННОЕ ОСВЕЩЕНИЕ</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="#" class="menu">НОВОСТИ И СТАТЬИ</a>
+                        <a href="article.html" class="menu">НОВОСТИ И СТАТЬИ</a>
                     </li>
                     <li class="nav_menu__items">
                         <a href="gallery.html" class="menu">ПОРТФОЛИО</a>
