--- a/contackt.html
+++ b/contackt.html
@@ -21,13 +21,13 @@
                         <a href="index.html" class="menu menu_one">ГЛАВНАЯ</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="" class="menu">БИЗНЕС-ИДЕИ</a>
+                        <a href="buisnes.html" class="menu">БИЗНЕС-ИДЕИ</a>
                     </li>
                     <li class="nav_menu__items">
                         <a href="index_product.html" class="menu">ГАЛОГЕНЕРАТОРЫ</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="" class="menu">ИСКУССТВЕННОЕ ОСВЕЩЕНИЕ</a>
+                        <a href="equipment.html" class="menu">ИСКУССТВЕННОЕ ОСВЕЩЕНИЕ</a>
                     </li>
                     <li class="nav_menu__items">
                         <a href="article.html" class="menu">НОВОСТИ И СТАТЬИ</a>
@@ -36,7 +36,7 @@
                         <a href="gallery.html" class="menu">ПОРТФОЛИО</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="" class="menu">КОНТАКТЫ</a>
+                        <a href="contackt.html" class="menu">КОНТАКТЫ</a>
                     </li>
                 </ul>
             </nav>
