--- a/gallery_item.html
+++ b/gallery_item.html
@@ -18,13 +18,13 @@
                         <a href="index.html" class="menu menu_one">ГЛАВНАЯ</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="" class="menu">БИЗНЕС-ИДЕИ</a>
+                        <a href="buisnes.html" class="menu">БИЗНЕС-ИДЕИ</a>
                     </li>
                     <li class="nav_menu__items">
                         <a href="index_product.html" class="menu">ГАЛОГЕНЕРАТОРЫ</a>
                     </li>
                     <li class="nav_menu__items">
-                        <a href="" class="menu">ИСКУССТВЕННОЕ ОСВЕЩЕНИЕ</a>
+                        <a href="equipment.html" class="menu">ИСКУССТВЕННОЕ ОСВЕЩЕНИЕ</a>
                     </li>
                     <li class="nav_menu__items">
                         <a href="article.html" class="menu">НОВОСТИ И СТАТЬИ</a>
@@ -103,9 +103,96 @@
                             <img src="img/gallery_item_1.jpg" alt="">
                         </div>
                     </div>
+                    <div class="article__arrow">
+                        <div class="swiper-next">
+                            <img src="img/arrow.svg" alt="">
+                        </div>
+                        <div class="swiper-prev"><img src="img/arrow.svg" alt=""></div>
+                    </div>
                     <div class="__descr">
                         <p>
                             Соляная пещера в Детском реабилитационном центре "Дарина", г. Гатчина, Ленинградская обл.
+                        </p>
+                    </div>
+                </div>
+                <div class="slider__gallery swiper swiper-container">
+                    <div class="swiper-wrapper slider__gallery-items">
+                        <div class="swiper-slide gallery__img">
+                            <img src="img/gallery_item_1.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide gallery__img">
+                            <img src="img/gallery_item_1.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide gallery__img">
+                            <img src="img/gallery_item_1.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide gallery__img">
+                            <img src="img/gallery_item_1.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="article__arrow">
+                        <div class="swiper-next">
+                            <img src="img/arrow.svg" alt="">
+                        </div>
+                        <div class="swiper-prev"><img src="img/arrow.svg" alt=""></div>
+                    </div>
+                    <div class="__descr">
+                        <p>
+                            Ремонт галокамеры 4 кв.м в Детском санатории "Спартак", п. Вырица, Ленинградская обл.
+                        </p>
+                    </div>
+                </div>
+                <div class="slider__gallery swiper swiper-container">
+                    <div class="swiper-wrapper slider__gallery-items">
+                        <div class="swiper-slide gallery__img">
+                            <img src="img/gallery_item_1.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide gallery__img">
+                            <img src="img/gallery_item_1.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide gallery__img">
+                            <img src="img/gallery_item_1.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide gallery__img">
+                            <img src="img/gallery_item_1.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="article__arrow">
+                        <div class="swiper-next">
+                            <img src="img/arrow.svg" alt="">
+                        </div>
+                        <div class="swiper-prev"><img src="img/arrow.svg" alt=""></div>
+                    </div>
+                    <div class="__descr">
+                        <p>
+                            Соляная пещера в Мастерской красоты, г. Киров, Радужный, ул. Проспект Строителей, 9а
+                        </p>
+                    </div>
+                </div>
+                <div class="slider__gallery swiper swiper-container">
+                    <div class="swiper-wrapper slider__gallery-items">
+                        <div class="swiper-slide gallery__img">
+                            <img src="img/gallery_item_1.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide gallery__img">
+                            <img src="img/gallery_item_1.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide gallery__img">
+                            <img src="img/gallery_item_1.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide gallery__img">
+                            <img src="img/gallery_item_1.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="article__arrow">
+                        <div class="swiper-next">
+                            <img src="img/arrow.svg" alt="">
+                        </div>
+                        <div class="swiper-prev"><img src="img/arrow.svg" alt=""></div>
+                    </div>
+                    <div class="__descr">
+                        <p>
+                            Соляная комната в детском саду "Лукоморье", г. Звенигород, Московская обл., 6 кв.м
                         </p>
                     </div>
                 </div>
