--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
                         </p>             
                     </div>
                     <div class="team_item__block">
-                        <div class="qwerty">
+                        <div class="items">
                             <img src="img/team_img_two.jpg" alt="team_img" class="team_img">  
                             <h3 class="team_name">
                                 Екатерина
@@ -758,7 +758,7 @@
                         </div>                 
                     </div>
                     <div class="team_item__block">
-                        <div class="qwerty">
+                        <div class="items">
                             <img src="img/team_img_three.jpg" alt="team_img" class="team_img">  
                             <h3 class="team_name">
                                 Антон
@@ -772,7 +772,7 @@
                         </div>                
                     </div>
                     <div class="team_item__block">
-                        <div class="qwerty">
+                        <div class="items">
                             <img src="img/team_img_four.jpg" alt="team_img" class="team_img"> 
                             <h3 class="team_name">
                                 Максим
