--- a/index.html
+++ b/index.html
@@ -776,6 +776,8 @@
                             </div>
                         </div>
                     </div>
+                    <div class="swiper-phone-next"><img src="img/phone_arrow_prev.svg" alt=""></div>
+                    <div class="swiper-phone-prev"><img src="img/phone_arrow_next.svg" alt=""></div>
                 </div>
             </div>
         </section>
@@ -842,8 +844,13 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </section>
+        <div class="phone__arrow">
+            <div class="swiper-team-next"><img src="img/phone_arrow_prev.svg" alt=""></div>
+            <div class="swiper-team-prev"><img src="img/phone_arrow_next.svg" alt=""></div>
+        </div>
         <section class="reviews">
             <div class="container">
                 <div class="we_block_h1">
@@ -870,6 +877,8 @@
                             <video src="video/Peter & Gwen┃hold on (Edit) (720p).mp4" controls width="100%"></video>
                         </div>
                     </div>
+                    <div class="swiper-team-next"><img src="img/phone_arrow_prev.svg" alt=""></div>
+                    <div class="swiper-team-prev"><img src="img/phone_arrow_next.svg" alt=""></div>
                 </div>
                 <div class="reviews_next">
                     <a href="" class="reviews_next_a">
